Update 10_1 - jupyter-labs-spacex-data-collection-api-v2.ipynb

--- a/10_1 - jupyter-labs-spacex-data-collection-api-v2.ipynb
+++ b/10_1 - jupyter-labs-spacex-data-collection-api-v2.ipynb
@@ -886,7 +886,7 @@
     "# Eliminaremos filas con múltiples núcleos porque son cohetes Falcon con dos propulsores de cohete adicionales y filas que tienen \n",
     "# múltiples cargas útiles en un solo cohete.\n",
     "\n",
-    "#1️⃣ data = data[data['cores'].map(len)==1]\n",
+    "#1. data = data[data['cores'].map(len)==1]\n",
     "#¿Qué hace?\n",
     "#Filtra las filas del DataFrame data para quedarse solo con aquellas donde la columna 'cores' tiene exactamente un solo elemento.\n",
     "\n",
@@ -899,7 +899,7 @@
     "# Dado que payloads (las cargas útiles) y cores (los núcleos) son listas de tamaño 1, también extraeremos el valor único de la lista \n",
     "# y reemplazaremos la característica.\n",
     "\n",
-    "#2️⃣ data['cores'] = data['cores'].map(lambda x : x[0])\n",
+    "#2. data['cores'] = data['cores'].map(lambda x : x[0])\n",
     "#¿Qué hace?\n",
     "#Toma la lista que hay en cada fila de la columna 'cores' y extrae el primer elemento de esa lista (el único, en este caso, porque lo \n",
     "# filtramos antes).\n",
